# backend_habits

./: .env.example  README.md  docker-compose.yaml  dumpdata_30-06-2024.json  pyproject.toml
config/: settings.py  urls.py
habits/: admin.py  models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_habit_tg_mailing.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_write_message.py
